Updated build.gradle to use Java 10, added arguments for jdk.incubator.httpclient