@@ -17,12 +17,27 @@ apply plugin: 'io.spring.dependency-management'
 
 group = 'com.linkedpipes.lpa'
 version = '0.0.1'
-sourceCompatibility = 1.9
+sourceCompatibility = 1.10
 
 repositories {
 	mavenCentral()
 }
 
+compileJava {
+	options.compilerArgs += ["--add-modules", "jdk.incubator.httpclient"]
+}
+
+compileTestJava {
+	options.compilerArgs += ["--add-modules", "jdk.incubator.httpclient"]
+}
+
+test {
+	jvmArgs += ["--add-modules", "jdk.incubator.httpclient"]
+}
+
+bootRun {
+	args = ["--add-modules jdk.incubator.httpclient"]
+}
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
